--- a/widgets/3dmodel.html
+++ b/widgets/3dmodel.html
@@ -110,11 +110,11 @@
         data-vis-attrs="oid/id;gltf_file/image;"
         data-vis-attrs0="group.model;model_scene/custom,3dmodel.viseditor.sceneSelector;model_pos_x[1]/number;model_pos_y[1]/number;model_pos_z[1]/number;scale[0.5]/slider,0,1,0.01;background_color[#bfe3dd]/color;"
         data-vis-attrs1="group.modelcamera;model_camera_target_pos_x[0]/number;model_camera_target_pos_y[0]/number;model_camera_target_pos_z[0]/number;model_camera_pos_x[2]/number;model_camera_pos_y[4]/number;model_camera_pos_z[3]/number;"
-        data-vis-attrs2="group.modellighting;enable_realistic_lighting[false]/checkbox;enable_ambient_lighting[true]/checkbox;ambient_color[#ffffff]:color;ambient_intensity[1]/slider,0,2,0.1;number_switchable_lights[0]/number;"
+        data-vis-attrs2="group.modellighting;enable_realistic_lighting[false]/checkbox;enable_ambient_lighting[true]/checkbox;ambient_color[#ffffff]:color;ambient_intensity[1]/slider,0,2,0.1;enable_shadows[true]/checkbox;number_switchable_lights[0]/number;"
         data-vis-attrs3="group.modelswitchablelights/byindex;light_name(0-number_switchable_lights)/custom,3dmodel.viseditor.lightsSelector;light_monitored_state(0-number_switchable_lights)/id;"
         data-vis-attrs4="group.modelanimations;highlight_selected[false]/checkbox;highlight_color/color;number_clickable_objects[0]/number;number_animations[0]/number;"
         data-vis-attrs5="group.modelclickableobjects/byindex;clickable_object_name(0-number_clickable_objects)/custom,3dmodel.viseditor.clickableObjectsSelector;clickable_object_action_id(0-number_clickable_objects)/id;clickable_object_action_task(0-number_clickable_objects)/text;"
-        data-vis-attrs6="group.modelanimations/byindex;animation_behaviour(0-number_animations)[automatic]/select,automatic,monitorstate;animation_automatic_delay(0-number_animations)/number;animation_automatic_repeat(0-number_animations)[true]/checkbox;monitored_state_name(0-number_animations)/id;state_animation(0-number_animations)/custom,3dmodel.viseditor.animationsSelector,state_animation_old(0-number_animations);"
+        data-vis-attrs6="group.modelanimations/byindex;animation_behaviour(0-number_animations)[repeat]/select,repeat,monitorstate/animationBehaviourOnChange;monitored_state_name(0-number_animations)/id;state_animation(0-number_animations)/custom,3dmodel.viseditor.animationsSelector;state_animation_mapping(0-number_animations)[switch]/select,switch,percentage;"
         data-vis-set="3dmodel"
         data-vis-name="3D-Model"
         data-vis-beta="true">
