--- a/widgets/3dmodel.html
+++ b/widgets/3dmodel.html
@@ -6,6 +6,7 @@
 <!-- here you can include so many css as you want -->
 <link rel="stylesheet" href="widgets/vis-3dmodel/css/style.css" />
 <!-- here you can include so many js-files as you want -->
+<script type="text/javascript" src="widgets/vis-3dmodel/lib/loglevel.min.js"></script>
 <script type="text/javascript" src="widgets/vis-3dmodel/js/threejs-model.js"></script>
 <script type="text/javascript" src="widgets/vis-3dmodel/lib/three.min.js"></script>
 <script type="text/javascript" src="widgets/vis-3dmodel/lib/OrbitControls.js"></script>
@@ -20,12 +21,13 @@
         data-vis-attrs="oid/id;gltf_file/image;show_loader[true]/checkbox;"
         data-vis-attrs0="group.model;model_scene/custom,3dmodel.viseditor.sceneSelector;model_pos_x[1]/number;model_pos_y[1]/number;model_pos_z[1]/number;scaling[0.5]/slider,0,10,0.01;background_color[#bfe3dd]/color;"
         data-vis-attrs1="group.modelcamera;model_camera_target_pos_x[0]/number;model_camera_target_pos_y[0]/number;model_camera_target_pos_z[0]/number;model_camera_pos_x[2]/number;model_camera_pos_y[4]/number;model_camera_pos_z[3]/number;"
-        data-vis-attrs2="group.modellighting;enable_realistic_lighting[false]/checkbox;enable_ambient_lighting[true]/checkbox;ambient_color[#ffffff]/color;ambient_intensity[1]/slider,0,2,0.1;enable_shadows[true]/checkbox;number_switchable_lights[0]/number;"
+        data-vis-attrs2="group.modellighting;enable_realistic_lighting[false]/checkbox;enable_ambient_lighting[true]/checkbox;ambient_color[#ffffff]/color;ambient_intensity[1]/slider,0,2,0.1;punctual_lights_max_power[2000]/number;enable_shadows[true]/checkbox;number_switchable_lights[0]/number;"
         data-vis-attrs3="group.modelswitchablelights/byindex;light_name(0-number_switchable_lights)/custom,3dmodel.viseditor.lightsSelector;light_monitored_state(0-number_switchable_lights)/id;light_max_power(0-number_switchable_lights)/number;"
         data-vis-attrs4="group.modelclickableobjects;highlight_selected[false]/checkbox;highlight_color/color;number_clickable_objects[0]/number;"
         data-vis-attrs5="group.modelclickableobjects/byindex;clickable_object_name(0-number_clickable_objects)/custom,3dmodel.viseditor.clickableObjectsSelector;clickable_object_action_id(0-number_clickable_objects)/id;clickable_object_action_task(0-number_clickable_objects)/text;"
         data-vis-attrs6="group.modelanimations;number_animations[0]/number;"
-        data-vis-attrs7="group.modelanimations/byindex;animation_behaviour(0-number_animations)/select,autoplay,monitorstate/animationBehaviourOnChange;monitored_state_name(0-number_animations)/id;monitored_state_max_value(0-number_animations)[100]/number;animation(0-number_animations)/custom,3dmodel.viseditor.animationsSelector;animation_repeat(0-number_animations)[false]/checkbox;"
+        data-vis-attrs7="group.modelanimations/byindex;animation_behaviour(0-number_animations)/select,autoplay,monitorstate;monitored_state_name(0-number_animations)/id;monitored_state_max_value(0-number_animations)[100]/number;animation(0-number_animations)/custom,3dmodel.viseditor.animationsSelector;animation_repeat(0-number_animations)[false]/checkbox;"
+        data-vis-attrs8="group.modeldebug;debug_loglevel[error]/select,silent,error,warn,info,debug,trace;"
         data-vis-set="3dmodel"
         data-vis-name="3D-Model"
         data-vis-beta="true">
